--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ name = "tufa_server"
 path = "src/main.rs"
 
 [dependencies]
+axum = {version = "=0.6.19"}
 actix-cors = {version = "=0.6.4"}
 actix-session = {version = "=0.7.2", features = ["redis-rs-tls-session"]}
 actix-web = {version = "=4.3.1"}
@@ -30,7 +31,7 @@ hex = {version = "=0.4"}
 hmac = {version = "=0.12", features = ["std"]}
 html_parser = {version ="=0.6.2" }
 htmlescape = {version = "=0.3"}
-http = {version = "=0.2.8"}
+http = {version = "=0.2.9"}
 itertools = {version = "=0.10.1"}
 mongodb = {version = "=2.0.1"}
 num_cpus = {version = "=1.15.0"}
@@ -51,7 +52,7 @@ strum = {version = "=0.24.1"}
 strum_macros = {version = "=0.24.3"}
 thiserror = {version = "=1.0.30"}
 time = {version = "=0.3.9"}
-tokio = {version = "=1.19.2", features = ["macros"]}
+tokio = {version = "=1.29.1", features = ["macros"]}
 toml = {version = "=0.5"}
 tracing = {version = "=0.1", features = ["log", "valuable"]}
 tracing-actix-web = {version = "=0.7.2"}
@@ -86,7 +87,7 @@ user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
 # quick-xml = "0.18.1"
 # log = "0.4"
 # simplelog = "0.9"
-# tokio = {version = "=1.19.2", features = ["macros"]}
+# tokio = {version = "=1.29.1", features = ["macros"]}
 # tokio-compat = "0.1.6"
 # crossbeam = "0.8.0"
 # async-std = "1.9.0"#remove later its only for example
@@ -101,13 +102,13 @@ user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 
 [dev-dependencies]
-claim = {version = "=0.5"}
+# claim = {version = "=0.5"}
 fake = {version = "=2.3"}
 linkify = {version = "=0.8"}
 reqwest = {version = "=0.11"}
 serde_json = {version = "=1"}
 serde_urlencoded = {version = "=0.7.1"}
-tokio = {version = "=1.19.2", features = ["rt", "macros"]}
+tokio = {version = "=1.29.1", features = ["rt", "macros"]}
 wiremock = {version = "=0.5.2"}
 
 # ###########################
