--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ path = "src/main.rs"
 
 [dependencies]
 axum = {version = "=0.6.19"}
+tower = {version = "=0.4.13"}
+tower-http = {version = "=0.4.3", features = ["trace"]}
 actix-cors = {version = "=0.6.4"}
 actix-session = {version = "=0.7.2", features = ["redis-rs-tls-session"]}
 actix-web = {version = "=4.3.1"}
