--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ strum = {version = "=0.24.1"}
 strum_macros = {version = "=0.24.3"}
 thiserror = {version = "=1.0.30"}
 time = {version = "=0.3.9"}
-tokio = {version = "=1.29.1", features = ["macros"]}
+tokio = {version = "=1.29.1", features = ["macros", "rt-multi-thread"]}
 toml = {version = "=0.5"}
 tracing = {version = "=0.1", features = ["log", "valuable"]}
 tracing-actix-web = {version = "=0.7.2"}
@@ -89,7 +89,7 @@ user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
 # quick-xml = "0.18.1"
 # log = "0.4"
 # simplelog = "0.9"
-# tokio = {version = "=1.29.1", features = ["macros"]}
+# tokio = {version = "=1.29.1", features = ["macros", "rt-multi-thread"]}
 # tokio-compat = "0.1.6"
 # crossbeam = "0.8.0"
 # async-std = "1.9.0"#remove later its only for example
@@ -110,7 +110,7 @@ linkify = {version = "=0.8"}
 reqwest = {version = "=0.11"}
 serde_json = {version = "=1"}
 serde_urlencoded = {version = "=0.7.1"}
-tokio = {version = "=1.29.1", features = ["rt", "macros"]}
+tokio = {version = "=1.29.1", features = ["rt", "macros", "rt-multi-thread"]}
 wiremock = {version = "=0.5.2"}
 
 # ###########################
