--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ name = "tufa_server"
 path = "src/main.rs"
 
 [dependencies]
-axum = {version = "=0.6.19"}
+axum = {version = "=0.6.19", features = ["headers"]}
 tower = {version = "=0.4.13"}
 tower-http = {version = "=0.4.3", features = ["trace", "fs"]}
 actix-cors = {version = "=0.6.4"}
