ENABLE_API_GIT_COMMIT_CHECK="false"

--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ STARTING_CHECK_LINK="" # https://www.google.com/
 
 TRACING_TYPE="error" # trace|debug|info|warn|error
 SOURCE_PLACE_TYPE="source" # source|github
+ENABLE_API_GIT_COMMIT_CHECK="false"
