--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,4 +139,4 @@ wiremock = {version = "=0.5.2"}
 # cargo run-script *script name*
 [package.metadata.scripts]
 something = "ls"
-restart_docker_compose = "sudo docker-compose down && sudo docker-compose up -d"
+restart_docker_compose = "sudo docker-compose down && docker-compose up -d"
