--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ serde-aux = {version = "=4.0.0"}
 serde-xml-rs = {version = "=0.6.0"}
 serde_derive = {version = "=1.0"}
 serde_json = {version = "=1.0"}
+serde_qs = {version = "=0.12.0"}
 sha2 = {version = "=0.10"}
 sqlx = {version = "=0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]}#"runtime-tokio-native-tls", 
 strum = {version = "=0.24.1"}
