sqlx = {version = "=0.7.1", features = ["postgres", "runtime-tokio"]} + thiserror = {version = "=1.0.48"}

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,10 +45,10 @@ serde_derive = {version = "=1.0"}
 serde_json = {version = "=1.0"}
 serde_urlencoded = {version = "=0.7.1"}
 sha2 = {version = "=0.10"}
-sqlx = {version = "=0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]}#"runtime-tokio-native-tls", 
+sqlx = {version = "=0.7.1", features = ["postgres", "runtime-tokio"]}
 strum = {version = "=0.24.1"}
 strum_macros = {version = "=0.24.3"}
-thiserror = {version = "=1.0.30"}
+thiserror = {version = "=1.0.48"}
 time = {version = "=0.3.23"}
 tokio = {version = "=1.29.1", features = ["macros", "rt-multi-thread"]}
 toml = {version = "=0.5"}
