--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ tufa_common = {path = "../tufa_common"}# local dev test without commits version
 #prod
 # enum_extension = {git = "https://github.com/kuqmua/enum_extension"}
 #dev
-compile_time_git_info = {path = "../proc_macros/compile_time_git_info"}
+compile_time_git_info = {path = "../compile_time_git_info"}
 enum_extension = {path = "../proc_macros/enum_extension"}
 error_occurence = {path = "../proc_macros/error_occurence"}
 error_occurence_lib = {path = "../error_occurence_lib"}
