--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,7 +78,7 @@ error_occurence_lib = {path = "../error_occurence_lib"}
 generate_getter_traits_for_struct_fields = {path = "../generate_getter_traits_for_struct_fields"}
 tufa_postgresql_crud = {path = "../tufa_postgresql_crud"}
 init_from_env = {path = "../init_from_env"}
-user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
+user_port_try_from_u16 = {path = "../user_port_try_from_u16"}
 #
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
